# qpax

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml
examples/: batch_qp.py  diff_qp.py
qpax/: __init__.py  diff_qp.py  elastic_qp.py  pdip.py  pdip_relaxed.py
test/: initial_values.npz  initial_values_pos.npz  misc_test_utils.py  problem_data.npz  problem_data_pos.npz  test_constraint_sizes.py  test_elastic_qp.py  test_qp_derivatives.py  test_qp_solver.py  test_qp_solver_double.py  test_qp_solver_single.py  test_your_module.py
