[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpax"
version = "0.0.3"
description = "Differentiable QP solver in JAX."
authors = [{ name = "Kevin Tracy", email = "ktracy@cmu.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["optimization", "automatic differentiation", "jax"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = ["jax>=0.4.0", "jaxlib>=0.4.0"]
optional-dependencies = { "dev" = ["pre-commit", "pytest"] }

[project.urls]
"Homepage" = "https://github.com/kevin-tracy/qpax"
