[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qpax"
version = "0.0.8"
description = "Differentiable QP solver in JAX."
authors = [{ name = "Kevin Tracy", email = "ktracy@cmu.edu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["optimization", "automatic differentiation", "jax"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = ["jax>=0.4.0", "jaxlib>=0.4.0"]
optional-dependencies = { "dev" = ["pre-commit", "pytest"] }

[project.urls]
"Homepage" = "https://github.com/kevin-tracy/qpax"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"node.py" = ["E402"]
